@@ -8,7 +8,10 @@ PHP                                                                        NEWS
   . Added NULL byte protection to exec, system and passthru. (Yasuo)
 
 - ODBC:
-  . Bug #68964 (Allowed memory size exhausted with odbc_exec). (Anatol)
+  . Fixed bug #68964 (Allowed memory size exhausted with odbc_exec). (Anatol)
+
+- Opcache:
+  . Fixed bug #69038 (switch(SOMECONSTANT) misbehaves). (Laruence)
 
 - OpenSSL:
   . Fix bug #61285, #68329, #68046, #41631: encrypted streams don't observe
